--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,14 @@
 NODE_ENV=development
 PORT=5000
 DATABASE_URL=mongodb_connection_string/ph-tour-mng-be
+
+# JWT
+JWT_ACCESS_SECRET=access_secret
+JWT_ACCESS_EXPIRES=1d
+
+# BCRYPT
+BCRYPT_SALT_ROUND=10
+
+# SUPER ADMIN
+SUPER_ADMIN_EMAIL=super@gmail.com
+SUPER_ADMIN_PASSWORD=12345678
