create refresh-token on login

--- a/.env.dev
+++ b/.env.dev
@@ -5,6 +5,8 @@ DATABASE_URL=mongodb_connection_string/ph-tour-mng-be
 # JWT
 JWT_ACCESS_SECRET=access_secret
 JWT_ACCESS_EXPIRES=1d
+JWT_REFRESH_SECRET=refresh_secret
+JWT_REFRESH_EXPIRES=7d
 
 # BCRYPT
 BCRYPT_SALT_ROUND=10
