--- a/.env.dev
+++ b/.env.dev
@@ -14,3 +14,14 @@ BCRYPT_SALT_ROUND=10
 # SUPER ADMIN
 SUPER_ADMIN_EMAIL=super@gmail.com
 SUPER_ADMIN_PASSWORD=12345678
+
+# Google
+GOOGLE_CLIENT_SECRET= google_client_secret
+GOOGLE_CLIENT_ID= google_client_id
+GOOGLE_CALLBACK_URL=http://localhost:5000/api/v1/auth/google/callback
+
+# Express Session
+EXPRESS_SESSION_SECRET=express-session
+
+# Frontend URL
+FRONTEND_URL=http://localhost:5173
